--- a/index.html
+++ b/index.html
@@ -26,17 +26,28 @@
 <section id="top">
 
 <div class="items">
-<button id="btn 1">Make an order</button>   
+
+<button id="btn 1">Make an order</button><br>
+
+<p1>we are here to satisfy your cravings,,lets do this</p1>
+
 <img src="./assets/css/images/7.jpg" alt="food items" height="180" width="260">
 </div>
 
 <div class="chefs">
-<button id="btn 2">order services</button>
+<button id="btn 2">order services</button><br>
+
+<p2>Get serviced wherever you are by our flexible team</p2>
+
 <img src="./assets/css/images/9.jpg" alt="chefs" height="180" width="260">
 </div>
 
 <div class="cheffings">
-<button id="btn 3">hire equipments</button>
+<button id="btn 3">hire equipments</button><br>
+
+<p3>M-cravings offer the best of kitchen equipment for hire
+    at an affordable price</p3>
+
 <img src="./assets/css/images/11.jpg" alt="cheffings" height="180" width="260">
 </div>
 
