--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 </head>
 
 <section id="pop">
-<h1>Your Home of Delicacies</h1>
-<h2>Get it all at Cravings and M-chefs</h2>
+<h1>Your home of delicacies</h1>
+<h2>Get it all at Craving and M-chefs</h2>
 
 
 <nav class="links">
 <ul>
 
-    <li>about us</li>
-    <li>contact us</li>
-    <li>Home</li>
+    <li> <a href="./assets/css/images/6.jpg">about us</a></li>
+    <li><a href="">contact us</a></li>
+    <li><a href="">home</a></li>
 
 </ul>
 </nav>
@@ -30,28 +30,21 @@
 <section id="top">
 
 <div class="items">
-
-<button id="btn 1">Make an order</button><br>
-
+<button id="btn1">Make an order</button><br>
 <p1>we are here to satisfy your cravings,,lets do this</p1>
-
 <img src="./assets/css/images/7.jpg" alt="food items" height="180" width="260">
 </div>
 
 <div class="chefs">
-<button id="btn 2">order services</button><br>
-
+<button id="btn2">order services</button><br>
 <p2>Get serviced wherever you are by our flexible team</p2>
-
 <img src="./assets/css/images/9.jpg" alt="chefs" height="180" width="260">
 </div>
 
 <div class="cheffings">
-<button id="btn 3">hire equipments</button><br>
-
+<button id="btn3">hire equipments</button><br>
 <p3>M-cravings offer the best of kitchen equipment for hire
     at an affordable price</p3>
-
 <img src="./assets/css/images/11.jpg" alt="cheffings" height="180" width="260">
 </div>
 
