--- a/index.html
+++ b/index.html
@@ -6,37 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cravings And M-Chefs</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <script></script>
+    
     
 
 </head>
-
+<header>
+  
 <section id="pop">
   <heading>Get it all at Craving and M-chefs</heading>
 <sub-heading class="sub-heading">Your home of delicaccies</sub-heading>
 
-
-
-<header>
-    <a href="#"class="logo"><i class="fas fas-shipping-fast"></i>cravings.</a>"
+  <a href="#"class="logo"><i class="fas fas-shipping-fast"></i>cravings.</a>"
 <nav class="navbar">
 <a class="#home" href="#home">home</a>
-<a href="#dishes">dishes</a>
+<a  class="#services"href="#services">services</a>
 <a href="#order">order</a>
 <a href="#about us">about us</a>
 
 
 </nav>
-
+<section class="home" id="home">
+  <div class="home-slider">
+  <div class="wrapper">
+      <div class="slide">
 
 </header>
 </section>
 
-
-<section class="home" id="home">
-<div class="home-slider">
-<div class="wrapper">
-    <div class="slide">
 
 </section>
 <section class="order" id="order">
@@ -81,7 +77,16 @@
               </div>
           </div>
       </section>
-  
+      <div id="caterers">
+        <ul id="caterers-list"></ul>
+    </div>
+
+    <div id="caterer-info">
+        <h2 id="h2-1"></h2>
+        <h2 id="h2-2"></h2>
+        <h2 id="h2-3"></h2>
+    </div>
+    <script src="./index.js"></script>
         <div class="footer-copyright text-center text-md-center">
         <p>Created By<a href="https://layersony.github.io/portfolio/">Mboya Anyango</a></p>
         © 2022 Copyright
