modified html file

--- a/index.html
+++ b/index.html
@@ -16,21 +16,24 @@
   <heading>Get it all at Craving and M-chefs</heading>
 <sub-heading class="sub-heading">Your home of delicaccies</sub-heading>
 
-  <a href="#"class="logo"><i class="fas fas-shipping-fast"></i>cravings.</a>"
+  <a href="#"class="logo"><i class="fas fas-shipping-fast"></i>cravings M-chefs,</a>"
 <nav class="navbar">
 <a class="#home" href="#home">home</a>
 <a  class="#services"href="#services">services</a>
 <a href="#order">order</a>
-<a href="#about us">about us</a>
+<a class="dishes" href="#dishes">dishes</a>
 
 
 </nav>
+</header>
 <section class="home" id="home">
   <div class="home-slider">
   <div class="wrapper">
       <div class="slide">
+<img src="./assets/css/images/15.jpg" alt="">
+<img src="./assets/css/images/16.jpg" alt="">
+<img src="./assets/css/images/7.jpg" alt="">
 
-</header>
 </section>
 
 
@@ -41,8 +44,22 @@
       <div class="slide">
   
   </section>
+  <section class="services">
+  <div class="order-slider">
+    <div class="wrapper">
+        <div class="slide">
+          <h1>we offer the best of catering service sin the country<br>
+            hire us for odeal celebrations and parties</h1>
+            <section id="serviceImg">
+            <img src="./assets/css/images/9.jpg" alt="our caterers" height="180px" width="263px">
+            <img src="./assets/css/images/12.jpg" alt="" height="180px" width="263px">
+            <img src="./assets/css/images/11.jpg" alt="" height="180px" width="263px">
+          </section>
   
-
+            <section class="home" id="home">
+              <div class="home-slider">
+              <div class="wrapper">
+                  <div class="slide">
     <!-- footer section  -->
     <footer class="container text-center text-md-center bg-dark">
         <div class="container">
