--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
   <div class="home-slider">
   <div class="wrapper">
       <div class="slide">
-<img src="./assets/css/images/15.jpg" alt="">
-<img src="./assets/css/images/16.jpg" alt="">
-<img src="./assets/css/images/7.jpg" alt="">
+<img src="./assets/css/images/15.jpg" alt="" height="180px" width="263px">
+<img src="./assets/css/images/16.jpg" alt=""height="180px" width="263px">
+<img src="./assets/css/images/7.jpg" alt=""height="180px" width="263px">
 
 </section>
 
@@ -48,7 +48,7 @@
   <div class="order-slider">
     <div class="wrapper">
         <div class="slide">
-          <h1>we offer the best of catering service sin the country<br>
+          <h1>we offer the best of catering services in the country<br>
             hire us for odeal celebrations and parties</h1>
             <section id="serviceImg">
             <img src="./assets/css/images/9.jpg" alt="our caterers" height="180px" width="263px">
@@ -105,7 +105,7 @@
     </div>
     <script src="./index.js"></script>
         <div class="footer-copyright text-center text-md-center">
-        <p>Created By<a href="https://layersony.github.io/portfolio/">Mboya Anyango</a></p>
+        <p>Created By<a href="https://maryanneanyango99.github.io/cravings-and-M-chefs/">Mboya Anyango</a></p>
         © 2022 Copyright
         </div>
       </footer>
