--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <a  class="#services"href="#services">services</a>
 <a href="#order">order</a>
 <a class="dishes" href="#dishes">dishes</a>
-
-
+<img id="land">
+<img src="./assets/css/images/2.jpg" alt="">
 </nav>
 </header>
 <section class="home" id="home">
@@ -102,6 +102,14 @@
         <h2 id="h2-1"></h2>
         <h2 id="h2-2"></h2>
         <h2 id="h2-3"></h2>
+        
+    </div>
+    <div id="products">
+      <p1 id="p1-a"></p1>
+      <p1 id="p1-b"></p1>
+      <p1 id="p1-c"></p1>
+      
+
     </div>
     <script src="./index.js"></script>
         <div class="footer-copyright text-center text-md-center">
