index.html file

--- a/index.html
+++ b/index.html
@@ -13,23 +13,43 @@
 <header>
   
 <section id="pop">
-  <heading>Get it all at Craving and M-chefs</heading>
+  
+<div class="logo">
+  <i class="fa fas-forks">
+    <img src="" alt="">
+  </i>cravings M-chefs,</a>"
+</div> 
+
+<heading>Get it all at Craving and M-chefs</heading>
 <sub-heading class="sub-heading">Your home of delicaccies</sub-heading>
 
-  <a href="#"class="logo"><i class="fas fas-shipping-fast"></i>cravings M-chefs,</a>"
 <nav class="navbar">
 <a class="#home" href="#home">home</a>
 <a  class="#services"href="#services">services</a>
 <a href="#order">order</a>
 <a class="dishes" href="#dishes">dishes</a>
-<img id="land">
-<img src="./assets/css/images/2.jpg" alt="">
 </nav>
 </header>
+
+<section id="openAPI"></section>
+<div class="input">
+  <input type="text" class="inputValue"placeholder="enter city name=">
+  <input type="submit" value="submit">
+</div>
+<div class="display">  
+  <h1 class="display"></h1>
+  <p class="desc"></p>
+  <p class="temp"></p>
+</div>
+
+</section>
+
 <section class="home" id="home">
   <div class="home-slider">
   <div class="wrapper">
       <div class="slide">
+        <p>welcome to cravings<br>
+        serving you is our priority</p>
 <img src="./assets/css/images/15.jpg" alt="" height="180px" width="263px">
 <img src="./assets/css/images/16.jpg" alt=""height="180px" width="263px">
 <img src="./assets/css/images/7.jpg" alt=""height="180px" width="263px">
@@ -44,7 +64,7 @@
       <div class="slide">
   
   </section>
-  <section class="services">
+  <section id="services">
   <div class="order-slider">
     <div class="wrapper">
         <div class="slide">
@@ -86,7 +106,7 @@
                           <input type="text" class="field" placeholder="Your Name">
                           <input type="text" class="field" placeholder="Your Email">
                           <input type="text" class="field" placeholder="Phone">
-                          <textarea placeholder="Message" class="field"></textarea>
+                          <textarea placeholder="create orders" class="field"></textarea>
                           <button class="btn">Send</button>
                       </form>
                       
