--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
   </i>cravings M-chefs,</a>"
 </div> 
 
-<heading>Get it all at Craving and M-chefs</heading>
-<sub-heading class="sub-heading">Your home of delicaccies</sub-heading>
+<heading>Get it all at Craving and M-chefs<br>Your home of delicaccies</heading>
 
 <nav class="navbar">
 <a class="#home" href="#home">home</a>
@@ -113,7 +112,10 @@
                   </div>
               </div>
           </div>
+              
       </section>
+
+
       <div id="caterers">
         <ul id="caterers-list"></ul>
     </div>
@@ -141,3 +143,4 @@
     
 </body>
 </html>
+
