--- a/index.html
+++ b/index.html
@@ -30,14 +30,58 @@
   <div class="image">
       <img src="./assets/images/2.jpg" alt="">
   </div>
+<div class="front">
+    <div class="left-container">
+        <div class="bg"></div>
+        <div class="date-container">
+            <span class="day"><span id="day">Sunday</span><span id="date" class="date">4 Jan 2020</span></span>
+        </div>
+        <div class="weather">
+            <span class="degrees"><span id="temp">29</span>°</span> <span id="desc" class="desc">Scattered Clouds</span>
+        </div>
+        </div>
+    </div>
+</div>
 </section>
 <section class="speciality" id="speciality">
   <h1 class="heading"> our <span>speciality</span> </h1>
   <div class="box-container">
       <div class="box">
-          <img class="image" src="./assets/images/15.jpg" alt="">
+          <img class="image" src="./assets/images/" alt="">
+          <div class="content">
+              <img src="./assets/images/15.jpg" alt="">
+              <h3>tasty burger</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda inventore neque amet ipsa tenetur voluptates aperiam tempore libero labore aut.</p>
+          </div>
+      </div>
+      <div class="box">
+          <img class="image" src="./assets/images/8.jpg" alt="">
           <div class="content">
               <img src="./assets/images/16.jpg" alt="">
+              <h3>tasty burger</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda inventore neque amet ipsa tenetur voluptates aperiam tempore libero labore aut.</p>
+          </div>
+      </div>
+      <div class="box">
+          <img class="image" src="./assets/images/10.jpg" alt="">
+          <div class="content">
+              <img src="./assets/images/8.jpg" alt="">
+              <h3>tasty burger</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda inventore neque amet ipsa tenetur voluptates aperiam tempore libero labore aut.</p>
+          </div>
+      </div>
+      <div class="box">
+          <img class="image" src="./assets/images/13.jpg" alt="">
+          <div class="content">
+              <img src="./assets/images/18.jpg" alt="">
+              <h3>tasty burger</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda inventore neque amet ipsa tenetur voluptates aperiam tempore libero labore aut.</p>
+          </div>
+      </div>
+      <div class="box">
+          <img class="image" src="./assets/images/6.jpg" alt="">
+          <div class="content">
+              <img src="./assets/images/5.jpg" alt="">
               <h3>tasty burger</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda inventore neque amet ipsa tenetur voluptates aperiam tempore libero labore aut.</p>
           </div>
@@ -49,7 +93,33 @@
     <div class="box-container">
         <div class="box">
             <span class="price"> KSh 500 - KSh 2,000 </span>
-            <img src="./assets/images/8.jpg" alt="">
+            <img src="./assets/images/5.jpg" alt="">
+            <h3>tasty burger</h3>
+            <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+            </div>
+            <a href="#" class="btn">order now</a>
+        </div>
+        <div class="box">
+            <span class="price"> KSh 500 - KSh 2,000 </span>
+            <img src="./assets/images/4.jpg" alt="">
+            <h3>tasty burger</h3>
+            <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+            </div>
+            <a href="#" class="btn">order now</a>
+        </div>
+        <div class="box">
+            <span class="price"> KSh 500 - KSh 2,000 </span>
+            <img src="./assets/images/7.jpg" alt="">
             <h3>tasty burger</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -65,7 +135,7 @@
   <h1 class="heading"> <span>order</span> now </h1>
   <div class="row">
       <div class="image">
-          <img src="./assets/images/18.jpg" alt="">
+          <img src="./assets/images/7.jpg" alt="">
       </div>
       <form action="">
           <div class="inputBox">
@@ -91,5 +161,6 @@
   </div>
   <h1 class="credit"> created by <span> MaryAnn </span> | all rights reserved! </h1>
 </section>
+    <script src="./assets/js/index.js"></script>
 </body>
 </html>
