--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <section class="home" id="home">
   <div class="content">
       <h3>baked with love</h3>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas accusamus tempore temporibus rem amet laudantium animi optio voluptatum. Natus obcaecati unde porro nostrum ipsam itaque impedit incidunt rem quisquam eos!</p>
+      <p>the doctor of future will give no medication but will interest his patients in the care of human frame,diet and in the cause and prevention of disease.cravings helps you eat healthy,we nurse empty stomachs,win big</p>
       <a href="#order" class="btn">order now</a>
   </div>
   <div class="image">
@@ -34,10 +34,10 @@
     <div class="left-container">
         <div class="bg"></div>
         <div class="date-container">
-            <span class="day"><span id="day">Sunday</span><span id="date" class="date">4 Jan 2020</span></span>
+            <span class="day"><span id="day">Tuesday</span><span id="date" class="date">28 June 2022</span></span>
         </div>
         <div class="weather">
-            <span class="degrees"><span id="temp">29</span>°</span> <span id="desc" class="desc">Scattered Clouds</span>
+            <span class="degrees"><span id="temp">28</span>°</span> <span id="desc" class="desc">Scattered Clouds</span>
         </div>
         </div>
     </div>
@@ -51,7 +51,7 @@
           <div class="content">
               <img src="./assets/images/15.jpg" alt="">
               <h3>tasty burger</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda inventore neque amet ipsa tenetur voluptates aperiam tempore libero labore aut.</p>
+              <p>welcome to Cravings,we offer the best of services and our food is delicious like always</p>
           </div>
       </div>
       <div class="box">
@@ -59,7 +59,7 @@
           <div class="content">
               <img src="./assets/images/16.jpg" alt="">
               <h3>tasty burger</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda inventore neque amet ipsa tenetur voluptates aperiam tempore libero labore aut.</p>
+              <p>it's us again,eat healthy always.we are here to carter for your needs.Eat crappy,feel crappy,eat healthy,feel healthy.</p>
           </div>
       </div>
       <div class="box">
@@ -67,7 +67,7 @@
           <div class="content">
               <img src="./assets/images/8.jpg" alt="">
               <h3>tasty burger</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda inventore neque amet ipsa tenetur voluptates aperiam tempore libero labore aut.</p>
+              <p>health habits,longer life,meeting your craving needs.family meals,dishes of different kind,lets have eat and dine.</p>
           </div>
       </div>
       <div class="box">
@@ -75,7 +75,7 @@
           <div class="content">
               <img src="./assets/images/18.jpg" alt="">
               <h3>tasty burger</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda inventore neque amet ipsa tenetur voluptates aperiam tempore libero labore aut.</p>
+              <p>your orders are ready just call us,no delays at all.24/7 services,choose us and try us.</p>
           </div>
       </div>
       <div class="box">
@@ -83,7 +83,7 @@
           <div class="content">
               <img src="./assets/images/5.jpg" alt="">
               <h3>tasty burger</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda inventore neque amet ipsa tenetur voluptates aperiam tempore libero labore aut.</p>
+              <p>Cravings will bacon your heart,everytime you eat is an opportunity to nourish your body.eat better,feel better.what lies behind us and before us are tiny ..compared to what lies within us,By choosing healthy over skinny,you are choosing self-love over self-judgment</p>
           </div>
       </div>
   </div>
